# Integral-Calculator

./: .gitignore  Cargo.toml  README.md
frontend/: package-lock.json
frontend/public/: index.html
frontend/src/: index.jsx
src/: main.rs
